# Vita

./: .gitignore  CMakeLists.txt  MANIFEST.in  Makefile  README.md  build_linux.sh  build_macos.sh  pyproject.toml  setup.py  test-requirements.txt
.github/workflows/: all.yml
examples/: normalized_control_demo.py
examples/multiprocessing_presets/: README.md  main.py
headless/builds/linux/: Makefile
headless/builds/osx/Vita.xcodeproj/: project.pbxproj
src/common/: synth_base.cpp  synth_base.h
src/headless/: bindings.cpp
src/synthesis/producers/: sample_source.cpp
tests/: test_normalized_params.py  test_render.py
vita/: __init__.py
vita/constants/: __init__.py
